<resources>

    <!--Splash-->
    <string name="app_name">WeatherApp</string>
    <string name="weather_splash">Weather</string>
    <string name="forecasts_splash">ForeCasts</string>
    <string name="button_splash">Get Start</string>

    <!--Menu-->
    <string name="home">Home</string>
    <string name="alert">Alert</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_map_fragment">Hello Map Fragment</string>
    <string name="hello_details_fragment">Hello Details Fragment</string>
    <string name="hello_home_fragment">Hello Home Fragment</string>
    <string name="hello_settings_fragment">Hello Settings Fragment</string>
    <string name="hello_settings_fragment1">Hello Settings Fragment</string>
    <string name="hello_alert_fragment">Hello Alert Fragment</string>
    <string name="hello_favorite_fragment">Hello favorite Fragment</string>
    <string name="hello_main_activity">Hello Main Activity</string>
    <string name="weather_icon" translatable="false">Weather Icon</string>

    <!--Home Fragment-->
    <string name="humidity_icon" translatable="false">Humidity Icon</string>
    <string name="humidity">Humidity</string>
    <string name="pressure_icon" translatable="false">Pressure Icon</string>
    <string name="pressure" translatable="false">Pressure</string>
    <string name="wind_speed_icon" translatable="false">Wind Speed Icon</string>
    <string name="wind_speed" translatable="false">Wind Speed</string>
    <string name="cloud_icon" translatable="false">Cloud Icon</string>
    <string name="clouds" translatable="false">Clouds</string>
    <string name="humidity_unit" translatable="false">%</string>
    <string name="pressure_unit" translatable="false">hPa</string>
    <string name="cloud_unit" translatable="false">%</string>

    <!--Map-->
    <string name="confirm" translatable="false">Confirm Location</string>

    <!-- Main-->
    <string name="permission_denied" translatable="false">Permission Denied! \n We need Location Permission to get your location</string>
    <string name="allow_permission" translatable="false">Allow Permission</string>

    <!--Alert-->
    <string name="add_alert" translatable="false">Add Alert</string>
    <string name="delete_alert" translatable="false">Delete Alert</string>
    <string name="alert_screen_item" translatable="false">Shown Alarm of Alert on screen</string>

    <string name="alert_placeholder1" translatable="false">No alerts available.</string>
    <string name="alert_placeholder2" translatable="false">Tap the + button to add a new alert.</string>

    <!--Favorite-->
    <string name="add_fav" translatable="false">Add Favorite</string>
    <string name="delete_fav" translatable="false">Delete Favorite</string>

    <string name="fav_placeholder1" translatable="false">No favorite locations.</string>
    <string name="fav_placeholder2" translatable="false">Tap the + button to add a favorite location.</string>

    <!--Settings-->

    <string name="location_preferences" translatable="false">Location Efficiency</string>
    <string name="get_location_by_gps" translatable="false">Retrieve Location via GPS</string>
    <string name="enable_to_get_location_automatically_using_gps" translatable="false">Enable automatic GPS location </string>
    <string name="choose_location_from_map" translatable="false">Select Location from Map</string>
    <string name="tap_to_choose_a_specific_location_from_the_map" translatable="false">Tap to select a location on the map</string>
    <string name="temperature_unit_preferences" translatable="false">Temperature Unit Efficiency</string>
    <string name="temperature_unit" translatable="false">Temperature Unit</string>
    <string name="choose_your_preferred_temperature_unit" translatable="false">Select your desired temperature</string>
    <string name="wind_speed_unit" translatable="false">Wind Speed Unit</string>
    <string name="choose_your_preferred_wind_speed_unit" translatable="false">Select your desired wind speed unit</string>
    <string name="language_preferences" translatable="false">Language Efficiency</string>
    <string name="language" translatable="false">Language</string>
    <string name="choose_your_preferred_language" translatable="false">Select your desired language</string>


    <!--Dialog-->
    <string name="dialog_delete" translatable="false">Are you sure to delete this item?</string>
    <string name="ok_delete" translatable="false">OK</string>
    <string name="cancel_delete" translatable="false">Cancel</string>


</resources>