<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.view.PreferencesFragment">

    <!-- Location Preferences -->
    <TextView
        android:id="@+id/location_preferences_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location_preferences"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <Switch
        android:id="@+id/location_gps_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location_by_gps"
        app:layout_constraintTop_toBottomOf="@id/location_preferences_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/location_gps_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_to_get_location_automatically_using_gps"
        app:layout_constraintTop_toBottomOf="@id/location_gps_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <Button
        android:id="@+id/location_map_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_location_from_map"
        app:layout_constraintTop_toBottomOf="@id/location_gps_summary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Temperature Preferences -->
    <TextView
        android:id="@+id/temp_unit_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/temperature_unit_preferences"
        app:layout_constraintTop_toBottomOf="@id/location_map_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <Spinner
        android:id="@+id/temp_unit_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/temp_unit_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Wind Unit Preferences -->
    <TextView
        android:id="@+id/wind_unit_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed_unit"
        app:layout_constraintTop_toBottomOf="@id/temp_unit_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <Spinner
        android:id="@+id/wind_unit_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/wind_unit_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <!-- Language Preferences -->
    <TextView
        android:id="@+id/language_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/language_preferences"
        app:layout_constraintTop_toBottomOf="@id/wind_unit_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/language_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
